--- a/index.html
+++ b/index.html
@@ -5,31 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polonia Tech</title>
-    <meta name="description" content="Polonia Apple Tech, tu tienda de tecnologia de confianza, encontra todos los productos Apple Originales y mas!">
+    <meta name="description"
+        content="Polonia Apple Tech, tu tienda de tecnologia de confianza, encontra todos los productos Apple Originales y mas!">
     <meta name="keywords" content="Apple, iPhone, Macbook, Apple Watch, Airpods, Servicio Tecnico, Capacitaciones">
     <link rel="icon" href="assets/logos/appleLogo-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    />
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <nav class="navigation">
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <div class="bar">
-            <a class="navmark" href="/">
-                <img
-                class="iconSize"
-                src="assets/logos/appleLogo-removebg-preview.png"
-                alt="logo apple "
-                />
+            <a class="navmark" href="#">
+                <img class="iconSize" src="assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
                 <h1>POLONIA APPLE TECH</h1>
             </a>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -43,8 +36,9 @@
             <a href="Pages/productos.html">Productos</a>
             <a href="Pages/servicioTecnico.html">Servicio Tecnico</a>
             <a href="Pages/capacitaciones.html">Capacitaciones</a>
-        </div>    
+        </div>
     </nav>
+
     <main>
         <section>
             <div id="carouselExampleIndicators" class="carousel slide">
@@ -58,9 +52,11 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <a href="index.html#planCanjeSite" class="d-flex justify-content-center align-items-center w-100">
+                        <a href="index.html#planCanjeSite"
+                            class="d-flex justify-content-center align-items-center w-100">
                             <picture>
-                                <source srcset="assets/img/carousel1.responsive.webp" type="image/webp" media="(max-width: 768px)">
+                                <source srcset="assets/img/carousel1.responsive.webp" type="image/webp"
+                                    media="(max-width: 768px)">
                                 <img src="assets/img/carousel1.webp" class="img-fluid" alt="Plan canje">
                             </picture>
                         </a>
@@ -68,15 +64,18 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center align-items-center w-100">
                             <picture>
-                                <source srcset="assets/img/carousel2.responsive.webp" type="image/webp" media="(max-width: 768px)">
+                                <source srcset="assets/img/carousel2.responsive.webp" type="image/webp"
+                                    media="(max-width: 768px)">
                                 <img src="assets/img/carousel2.webp" class="img-fluid" alt="Vision pro">
                             </picture>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <a href="Pages/servicioTecnico.html"  class="d-flex justify-content-center align-items-center w-100">
+                        <a href="Pages/servicioTecnico.html"
+                            class="d-flex justify-content-center align-items-center w-100">
                             <picture>
-                                <source srcset="assets/img/carousel3.responsive.webp" type="image/webp" media="(max-width: 768px)">
+                                <source srcset="assets/img/carousel3.responsive.webp" type="image/webp"
+                                    media="(max-width: 768px)">
                                 <img src="assets/img/carousel3.webp" class="img-fluid" alt="Servicio Tecnico">
                             </picture>
                         </a>
@@ -99,8 +98,10 @@
             <h2 class="subtituloOferta">OFERTAS EXCLUSIVAS DEL MES</h2>
             <div class="containerOferta">
                 <div class="images">
-                    <img src="assets/img/iphone-14.webp" alt="iphone 14" class="left" style="margin-top: -150px; margin-left: -100px; height: 150%;">
-                    <img src="assets/img/iphone-14.webp" alt="iphone 14" class="right" style="margin-bottom: -150px; margin-right: -100px; height: 150%;">
+                    <img src="assets/img/iphone-14.webp" alt="iphone 14" class="left"
+                        style="margin-top: -150px; margin-left: -100px; height: 150%;">
+                    <img src="assets/img/iphone-14.webp" alt="iphone 14" class="right"
+                        style="margin-bottom: -150px; margin-right: -100px; height: 150%;">
                 </div>
                 <div class="letraOferta">
                     <h4>IPHONE 14</h4>
@@ -115,8 +116,10 @@
             </div>
             <div class="containerOferta">
                 <div class="images">
-                    <img src="assets/img/iphone15pan.png" alt="iphone 15" class="left" style="margin-top: -150px; margin-left: -100px; height: 150%;">
-                    <img src="assets/img/iphone15pan.png" alt="iphone 15" class="right" style="margin-bottom: -150px; margin-right: -100px; height: 150%;">
+                    <img src="assets/img/iphone15pan.png" alt="iphone 15" class="left"
+                        style="margin-top: -150px; margin-left: -100px; height: 150%;">
+                    <img src="assets/img/iphone15pan.png" alt="iphone 15" class="right"
+                        style="margin-bottom: -150px; margin-right: -100px; height: 150%;">
                 </div>
                 <div class="letraOferta">
                     <h4>IPHONE 15</h4>
@@ -137,7 +140,7 @@
         <section id="planCanjeSite">
             <div class="card-group">
                 <div class="card">
-                    <img src="assets/img/imgCanje1.jpeg" class="fotoCard card-img-top" alt="...">
+                    <img src="assets/img/imgCanje1.jpeg" class="fotoCard card-img-top" alt="foto de carta">
                     <div class="letraCard card-body">
                         <h4 class="card-title">Vivi la experiencia "Plan Canje"</h4>
                         <p class="card-text">Acercate a tu sucursal o Centro de Atencion mas cercano, traenos tu equipo,
@@ -146,7 +149,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/fotocanje2.webp" class="fotoCard card-img-top" alt="...">
+                    <img src="assets/img/fotocanje2.webp" class="fotoCard card-img-top" alt="foto de carta">
                     <div class="letraCard card-body">
                         <h4 class="card-title">Revision en el momento</h4>
                         <p class="card-text">Realizamos una revision express para corroborar el estado del equipo,
@@ -155,7 +158,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="assets/img/fotocanje3.avif" class="fotoCard card-img-top" alt="...">
+                    <img src="assets/img/fotocanje3.avif" class="fotoCard card-img-top" alt="foto de carta">
                     <div class="letraCard card-body">
                         <h4 class="card-title">Entrega y Servicio</h4>
                         <p class="card-text">Una vez echa la revision, ya estas listo para Vivir La Experiencia en
@@ -175,13 +178,13 @@
         </section>
         <section class="newArrival">
             <h2 class="letraGigante">MACNIFICA</h2>
-            <img src="assets/img/macbook15.png" alt="">
+            <img src="assets/img/macbook15.png" alt="Macbook">
             <h2 class="letraGigante">15"</h2>
             <a class="verMas" href="Pages/productos.html">VER MAS</a>
         </section>
         <section class="newArrival">
             <h2 class="letraGigante">SERVICE</h2>
-            <img src="assets/img/COVERST.png" alt="Apple Watch Ultra" style="width: 50vw;">
+            <img src="assets/img/COVERST.png" alt="cover" style="width: 50vw;">
             <a class="verMas" href="Pages/servicioTecnico.html">VER MAS</a>
         </section>
     </main>
@@ -189,52 +192,53 @@
 
     <footer class="footer">
         <section class="contacto">
-          <div>
-              <h4>REDES</h4>
-              <div class="logoFooter">
-                <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                      <img class="imgFooter" src="assets/logos/instLogo.jpg" alt="instagram logo">
-                  </a>
+            <div>
+                <h4>REDES</h4>
+                <div class="logoFooter">
+                    <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                        <img class="imgFooter" src="assets/logos/instLogo.jpg" alt="instagram logo">
+                    </a>
 
-                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                      <img class="imgFooter" src="assets/logos/tiktoklogo.png" alt="tiktok logo">
-                  </a>
+                    <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                        <img class="imgFooter" src="assets/logos/tiktoklogo.png" alt="tiktok logo">
+                    </a>
 
-                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                      <img class="imgFooter" src="assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                  </a>
-              </div>
-          </div>
-          <div>
-              <h4>TELEFONOS</h4>
-              <div>
-                  <ul>
-                      <li>
-                        <a href="tel:011-1111-2222">011-1111-2222</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-4255-5589">011-4255-5589</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-5858-5858">011-5858-5858</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <div>
-              <h4>DIRECCIONES</h4>
-              <p>Calle Banana Loca, Bs.As, Argentina</p>
-          </div>
-          <div>
-              <h4>EMAILS</h4>
-              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
-          </div>
+                    <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                        <img class="imgFooter" src="assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h4>TELEFONOS</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="tel:011-1111-2222">011-1111-2222</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-4255-5589">011-4255-5589</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-5858-5858">011-5858-5858</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h4>DIRECCIONES</h4>
+                <p>Calle Banana Loca, Bs.As, Argentina</p>
+            </div>
+            <div>
+                <h4>EMAILS</h4>
+                <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+            </div>
         </section>
         <section class="infoFooter">
             <h4>INFO EXTRA</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                perferendis provident rem mollitia. Ab, vitae.</p>
+            <p>Horarios de atencion: Lunes a Sabados de 10:00 hs. a 19:00 hs. | Servicio tecnico disponible de Lunes a
+                Viernes a partir de las 13:30 hs. y Sabados jornada completa | Polonia Apple Tech forma parte de los 5
+                Reseller Oficiales de Apple, todos los productos relacionados a la marca son originales y poseen
+                garantia oficial con la misma.</p>
         </section>
     </footer>
 
