--- a/Pages/capacitaciones.html
+++ b/Pages/capacitaciones.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capacitaciones | Polonia Tech</title>
-    <meta name="description" content="Capacitate con los mejores en Polonia Apple Tech, te enseñamos a reparar productos y dar una buena experiencia al cliente">
+    <meta name="description"
+        content="Capacitate con los mejores en Polonia Apple Tech, te enseñamos a reparar productos y dar una buena experiencia al cliente">
     <meta name="keywords" content="Apple, reparaciones, cursos, Servicio Tecnico, Capacitaciones">
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,23 +17,30 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Jaini&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
     <nav class="navigation">
-        <div class="navmark">
-            <a href="/">
-                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <div class="bar">
+            <a class="navmark" href="/">
+                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+                <h1>POLONIA APPLE TECH</h1>
             </a>
-            <h1>POLONIA APPLE TECH</h1>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-bars fa-lg"></i>
+                <i class="fa-solid fa-times fa-lg"></i>
+            </label>
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
-            <a href="./contacto.html">Contacto</a>
-            <a href="./productos.html">Productos</a>
-            <a href="./servicioTecnico.html">Servicio Tecnico</a>
-            <a href="#" class="active">Capacitaciones</a>
+            <a href="/Pages/contacto.html">Contacto</a>
+            <a href="/Pages/productos.html">Productos</a>
+            <a href="/Pages/servicioTecnico.html">Servicio Tecnico</a>
+            <a href="# class=" active"">Capacitaciones</a>
         </div>
     </nav>
 
@@ -45,12 +53,14 @@
         <section>
             <div class="padreCapacitaciones">
                 <img src="../assets/img/capacitacionesimg.jpg" class="img-fluid" alt="soporte">
-                <p class="fontCapac">Bienvenidos a nuestra plataforma de capacitaciones en tecnología, donde podrás adquirir
+                <p class="fontCapac">Bienvenidos a nuestra plataforma de capacitaciones en tecnología, donde podrás
+                    adquirir
                     conocimientos
                     y habilidades para mantenerte actualizado en un mundo en constante evolución. Nuestros cursos están
                     diseñados para personas de todos los niveles, desde principiantes hasta expertos, y abarcan una
                     amplia gama de temas, desde programación y desarrollo web hasta inteligencia artificial y
-                    ciberseguridad. <br> ¡Prepárate para expandir tus horizontes y llevar tus habilidades tecnológicas al
+                    ciberseguridad. <br> ¡Prepárate para expandir tus horizontes y llevar tus habilidades tecnológicas
+                    al
                     siguiente nivel con nosotros!</p>
             </div>
         </section>
@@ -106,52 +116,53 @@
 
     <footer class="footer">
         <section class="contacto">
-          <div>
-              <h4>REDES</h4>
-              <div class="logoFooter">
-                <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
-                  </a>
+            <div>
+                <h4>REDES</h4>
+                <div class="logoFooter">
+                    <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
+                    </a>
 
-                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
-                  </a>
+                    <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
+                    </a>
 
-                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                  </a>
-              </div>
-          </div>
-          <div>
-              <h4>TELEFONOS</h4>
-              <div>
-                  <ul>
-                      <li>
-                        <a href="tel:011-1111-2222">011-1111-2222</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-4255-5589">011-4255-5589</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-5858-5858">011-5858-5858</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <div>
-              <h4>DIRECCIONES</h4>
-              <p>Calle Banana Loca, Bs.As, Argentina</p>
-          </div>
-          <div>
-              <h4>EMAILS</h4>
-              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
-          </div>
+                    <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h4>TELEFONOS</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="tel:011-1111-2222">011-1111-2222</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-4255-5589">011-4255-5589</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-5858-5858">011-5858-5858</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h4>DIRECCIONES</h4>
+                <p>Calle Banana Loca, Bs.As, Argentina</p>
+            </div>
+            <div>
+                <h4>EMAILS</h4>
+                <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+            </div>
         </section>
         <section class="infoFooter">
             <h4>INFO EXTRA</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                perferendis provident rem mollitia. Ab, vitae.</p>
+            <p>Horarios de atencion: Lunes a Sabados de 10:00 hs. a 19:00 hs. | Servicio tecnico disponible de Lunes a
+                Viernes a partir de las 13:30 hs. y Sabados jornada completa | Polonia Apple Tech forma parte de los 5
+                Reseller Oficiales de Apple, todos los productos relacionados a la marca son originales y poseen
+                garantia oficial con la misma.</p>
         </section>
     </footer>
 
