--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -10,23 +10,30 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
     <nav class="navigation">
-        <div class="navmark">
-            <a href="/">
-                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <div class="bar">
+            <a class="navmark" href="/">
+                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+                <h1>POLONIA APPLE TECH</h1>
             </a>
-            <h1>POLONIA APPLE TECH</h1>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-bars fa-lg"></i>
+                <i class="fa-solid fa-times fa-lg"></i>
+            </label>
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
             <a href="#" class="active">Contacto</a>
-            <a href="./productos.html">Productos</a>
-            <a href="./servicioTecnico.html">Servicio Tecnico</a>
-            <a href="./capacitaciones.html">Capacitaciones</a>
+            <a href="/Pages/productos.html">Productos</a>
+            <a href="/Pages/servicioTecnico.html">Servicio Tecnico</a>
+            <a href="/Pages/capacitaciones.html">Capacitaciones</a>
         </div>
     </nav>
 
@@ -42,13 +49,14 @@
         <section>
             <div class="linear-cont-bottom">
                 <h2>¡DEJANOS TUS DATOS Y UN ASESOR DE COMUNICA CON VOS!</h2>
-                <h4 class="textoContacto container">Polonia Apple Tech es el Apple Premium Reseller mas innovador del pais.
+                <h4 class="textoContacto container">Polonia Apple Tech es el Apple Premium Reseller mas innovador del
+                    pais.
                     Contamos con Asesores de alto rendimiento para hacer de esta experiencia, UNICA. Trabajamos con
                     paciencia y dedicacion en cada caso, en cada venta... Escribinos y forma parte, aca sos
                     importante... </h4>
             </div>
 
-            <form class="form-size row g-3 mx-auto">
+            <form class="row g-3 mx-auto">
                 <div class="col-md-4">
                     <label for="validationDefault01" class="form-label">Nombre</label>
                     <input type="text" class="form-control" id="validationDefault01" value="Steve" required>
@@ -101,35 +109,35 @@
         <section class="tarjetaAsesorPadre">
             <div class="tarjetaAsesor">
                 <div class="img">
-                  <img src="../assets/img/asesor1.png" alt="asesor">
+                    <img src="../assets/img/asesor1.png" alt="asesor">
                 </div>
                 <p>ASESOR 1</p>
                 <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
                 <div class="img">
-                  <img src="../assets/img/asesor3.png" alt="asesor">
+                    <img src="../assets/img/asesor3.png" alt="asesor">
                 </div>
                 <p>ASESOR 2</p>
                 <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
-              <div class="img">
-                <img src="../assets/img/asesor4.png" alt="asesor">
-              </div>
+                <div class="img">
+                    <img src="../assets/img/asesor4.png" alt="asesor">
+                </div>
                 <p>ASESOR 3</p>
                 <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
                 <div class="img">
-                  <img src="../assets/img/asesor2.png" alt="asesor">
+                    <img src="../assets/img/asesor2.png" alt="asesor">
                 </div>
                 <p>ASESOR 4</p>
                 <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
                 <div class="img">
-                  <img class="imgAsesor" src="../assets/img/asesor5.png" alt="asesor">
+                    <img class="imgAsesor" src="../assets/img/asesor5.png" alt="asesor">
                 </div>
                 <p>ASESOR 5</p>
                 <p>+54 911 ********</p>
@@ -161,52 +169,53 @@
 
     <footer class="footer">
         <section class="contacto">
-          <div>
-              <h4>REDES</h4>
-              <div class="logoFooter">
-                <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
-                  </a>
+            <div>
+                <h4>REDES</h4>
+                <div class="logoFooter">
+                    <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
+                    </a>
 
-                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
-                  </a>
+                    <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
+                    </a>
 
-                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                  </a>
-              </div>
-          </div>
-          <div>
-              <h4>TELEFONOS</h4>
-              <div>
-                  <ul>
-                      <li>
-                        <a href="tel:011-1111-2222">011-1111-2222</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-4255-5589">011-4255-5589</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-5858-5858">011-5858-5858</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <div>
-              <h4>DIRECCIONES</h4>
-              <p>Calle Banana Loca, Bs.As, Argentina</p>
-          </div>
-          <div>
-              <h4>EMAILS</h4>
-              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
-          </div>
+                    <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h4>TELEFONOS</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="tel:011-1111-2222">011-1111-2222</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-4255-5589">011-4255-5589</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-5858-5858">011-5858-5858</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h4>DIRECCIONES</h4>
+                <p>Calle Banana Loca, Bs.As, Argentina</p>
+            </div>
+            <div>
+                <h4>EMAILS</h4>
+                <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+            </div>
         </section>
         <section class="infoFooter">
             <h4>INFO EXTRA</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                perferendis provident rem mollitia. Ab, vitae.</p>
+            <p>Horarios de atencion: Lunes a Sabados de 10:00 hs. a 19:00 hs. | Servicio tecnico disponible de Lunes a
+                Viernes a partir de las 13:30 hs. y Sabados jornada completa | Polonia Apple Tech forma parte de los 5
+                Reseller Oficiales de Apple, todos los productos relacionados a la marca son originales y poseen
+                garantia oficial con la misma.</p>
         </section>
     </footer>
 
