--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -5,32 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos | Polonia tech</title>
-    <meta name="description" content="Polonia Apple Tech, bienvenidos a la Tienda Oficial, encontra todos nuestros porductos y mas!">
+    <meta name="description"
+        content="Polonia Apple Tech, bienvenidos a la Tienda Oficial, encontra todos nuestros porductos y mas!">
     <meta name="keywords" content="Apple, iPhone, Macbook, Apple Watch, Airpods, tienda online, ofertas">
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Pacifico&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
     </style>
 </head>
 
 <body>
-
     <nav class="navigation">
-        <div class="navmark">
-            <a href="/">
-                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <div class="bar">
+            <a class="navmark" href="/">
+                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+                <h1>POLONIA APPLE TECH</h1>
             </a>
-            <h1>POLONIA APPLE TECH</h1>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-bars fa-lg"></i>
+                <i class="fa-solid fa-times fa-lg"></i>
+            </label>
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
-            <a href="./contacto.html">Contacto</a>
+            <a href="/Pages/contacto.html">Contacto</a>
             <a href="#" class="active">Productos</a>
-            <a href="./servicioTecnico.html">Servicio Tecnico</a>
-            <a href="./capacitaciones.html">Capacitaciones</a>
+            <a href="/Pages/servicioTecnico.html">Servicio Tecnico</a>
+            <a href="/Pages/capacitaciones.html">Capacitaciones</a>
         </div>
     </nav>
 
@@ -103,8 +110,7 @@
                     <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 560</h5>
                 </div>
-                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/IPHONE13.png"
-                        alt="iphone 13">
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/IPHONE13.png" alt="iphone 13">
                     <h4>IPHONE 13</h4>
                     <p>de 128gb Green/Rose/Midnight/Starlight</p>
                     <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
@@ -132,8 +138,7 @@
                     <h5 class="precioTarjeta">U$D 1410</h5>
                     <p class="newTarjeta">NEW</p>
                 </div>
-                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/mB15.png"
-                        alt="Macbook 15">
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/mB15.png" alt="Macbook 15">
                     <h4>MACBOOK AIR 15"</h4>
                     <p>de 512gb - Chip M2 - Midnight</p>
                     <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
@@ -154,8 +159,7 @@
                     <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 320</h5>
                 </div>
-                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/airtag.webp"
-                        alt="Airtag">
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/airtag.webp" alt="Airtag">
                     <h4>APPLE AIRTAG PACK X4</h4>
                     <p>Pack x4 unidades Airtag Portable</p>
                     <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
@@ -175,52 +179,53 @@
 
     <footer class="footer">
         <section class="contacto">
-          <div>
-              <h4>REDES</h4>
-              <div class="logoFooter">
-                <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
-                  </a>
+            <div>
+                <h4>REDES</h4>
+                <div class="logoFooter">
+                    <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
+                    </a>
 
-                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
-                  </a>
+                    <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
+                    </a>
 
-                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                  </a>
-              </div>
-          </div>
-          <div>
-              <h4>TELEFONOS</h4>
-              <div>
-                  <ul>
-                      <li>
-                        <a href="tel:011-1111-2222">011-1111-2222</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-4255-5589">011-4255-5589</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-5858-5858">011-5858-5858</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <div>
-              <h4>DIRECCIONES</h4>
-              <p>Calle Banana Loca, Bs.As, Argentina</p>
-          </div>
-          <div>
-              <h4>EMAILS</h4>
-              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
-          </div>
+                    <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h4>TELEFONOS</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="tel:011-1111-2222">011-1111-2222</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-4255-5589">011-4255-5589</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-5858-5858">011-5858-5858</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h4>DIRECCIONES</h4>
+                <p>Calle Banana Loca, Bs.As, Argentina</p>
+            </div>
+            <div>
+                <h4>EMAILS</h4>
+                <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+            </div>
         </section>
         <section class="infoFooter">
             <h4>INFO EXTRA</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                perferendis provident rem mollitia. Ab, vitae.</p>
+            <p>Horarios de atencion: Lunes a Sabados de 10:00 hs. a 19:00 hs. | Servicio tecnico disponible de Lunes a
+                Viernes a partir de las 13:30 hs. y Sabados jornada completa | Polonia Apple Tech forma parte de los 5
+                Reseller Oficiales de Apple, todos los productos relacionados a la marca son originales y poseen
+                garantia oficial con la misma.</p>
         </section>
     </footer>
 
