--- a/Pages/servicioTecnico.html
+++ b/Pages/servicioTecnico.html
@@ -11,24 +11,30 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
-
     <nav class="navigation">
-        <div class="navmark">
-            <a href="../index.html">
-                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <div class="bar">
+            <a class="navmark" href="/">
+                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+                <h1>POLONIA APPLE TECH</h1>
             </a>
-            <h1>POLONIA APPLE TECH</h1>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-bars fa-lg"></i>
+                <i class="fa-solid fa-times fa-lg"></i>
+            </label>
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
-            <a href="./contacto.html">Contacto</a>
-            <a href="./productos.html">Productos</a>
+            <a href="/Pages/contacto.html">Contacto</a>
+            <a href="/Pages/productos.html">Productos</a>
             <a href="#" class="active">Servicio Tecnico</a>
-            <a href="./capacitaciones.html">Capacitaciones</a>
+            <a href="/Pages/capacitaciones.html">Capacitaciones</a>
         </div>
     </nav>
 
@@ -112,9 +118,10 @@
         </section>
         <section class="infoFooter">
             <h4>INFO EXTRA</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                perferendis provident rem mollitia. Ab, vitae.</p>
+            <p>Horarios de atencion: Lunes a Sabados de 10:00 hs. a 19:00 hs. | Servicio tecnico disponible de Lunes a
+                Viernes a partir de las 13:30 hs. y Sabados jornada completa | Polonia Apple Tech forma parte de los 5
+                Reseller Oficiales de Apple, todos los productos relacionados a la marca son originales y poseen
+                garantia oficial con la misma.</p>
         </section>
     </footer>
 
