--- a/Pages/capacitaciones.html
+++ b/Pages/capacitaciones.html
@@ -26,8 +26,8 @@
     <nav class="navigation">
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <div class="bar">
-            <a class="navmark" href="/">
-                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+            <a class="navmark" href="../index.html">
+                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
                 <h1>POLONIA APPLE TECH</h1>
             </a>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -37,10 +37,10 @@
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
-            <a href="/Pages/contacto.html">Contacto</a>
-            <a href="/Pages/productos.html">Productos</a>
-            <a href="/Pages/servicioTecnico.html">Servicio Tecnico</a>
-            <a href="# class=" active"">Capacitaciones</a>
+            <a href="./contacto.html">Contacto</a>
+            <a href="./productos.html">Productos</a>
+            <a href="./servicioTecnico.html">Servicio Tecnico</a>
+            <a href="#" class="active">Capacitaciones</a>
         </div>
     </nav>
 
