--- a/Pages/capacitaciones.html
+++ b/Pages/capacitaciones.html
@@ -37,7 +37,7 @@
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
-            <a href="./contacto.html">Contacto</a>
+            <a href="./Pages/contacto.html">Contacto</a>
             <a href="./productos.html">Productos</a>
             <a href="./servicioTecnico.html">Servicio Tecnico</a>
             <a href="#" class="active">Capacitaciones</a>
