--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -20,7 +20,7 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <div class="bar">
             <a class="navmark" href="/">
-                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
                 <h1>POLONIA APPLE TECH</h1>
             </a>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -31,9 +31,9 @@
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
             <a href="#" class="active">Contacto</a>
-            <a href="/Pages/productos.html">Productos</a>
-            <a href="/Pages/servicioTecnico.html">Servicio Tecnico</a>
-            <a href="/Pages/capacitaciones.html">Capacitaciones</a>
+            <a href="./productos.html">Productos</a>
+            <a href="./servicioTecnico.html">Servicio Tecnico</a>
+            <a href="./capacitaciones.html">Capacitaciones</a>
         </div>
     </nav>
 
