--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -24,7 +24,7 @@
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <div class="bar">
             <a class="navmark" href="/">
-                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
+                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
                 <h1>POLONIA APPLE TECH</h1>
             </a>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -34,10 +34,10 @@
         </div>
         <div class="navlinks">
             <a href="../index.html">Inicio</a>
-            <a href="/Pages/contacto.html">Contacto</a>
+            <a href="./contacto.html">Contacto</a>
             <a href="#" class="active">Productos</a>
-            <a href="/Pages/servicioTecnico.html">Servicio Tecnico</a>
-            <a href="/Pages/capacitaciones.html">Capacitaciones</a>
+            <a href="./servicioTecnico.html">Servicio Tecnico</a>
+            <a href="./capacitaciones.html">Capacitaciones</a>
         </div>
     </nav>
 
