--- a/Pages/servicioTecnico.html
+++ b/Pages/servicioTecnico.html
@@ -48,7 +48,7 @@
 
         <section>
             <div>
-                <h2 class="letraGigante">SOPORTE PERSONALIZADO</h2>
+                <h2 class="titulo-st">SOPORTE PERSONALIZADO</h2>
             </div>
             <div class="parrafoSer1">
                 <img class="img-fondo-st" src="../assets/img/service-backg.png" alt="fondo service">
