--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -19,7 +19,7 @@
     <nav class="navigation">
         <input type="checkbox" id="nav-toggle" class="nav-toggle" />
         <div class="bar">
-            <a class="navmark" href="/">
+            <a class="navmark" href="../index.html">
                 <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple " />
                 <h1>POLONIA APPLE TECH</h1>
             </a>
